fix sidenav hiding on mobile

--- a/modules/sidenav/sidenav.module.sass
+++ b/modules/sidenav/sidenav.module.sass
@@ -5,6 +5,7 @@
     position: relative
     z-index: 100
     height: 100%
+    max-height: 100%
     width: 18em
     display: flex
     flex-direction: column
@@ -26,8 +27,9 @@
         font-size: 0.75rem
         padding: 0
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        position: fixed
         &[data-hidden="true"]
-            margin-top: -90px
+            margin-top: -200px
 
     &__logo
         display: flex
