--- a/styles/_simplebar.sass
+++ b/styles/_simplebar.sass
@@ -1,2 +1,6 @@
 [data-simplebar]
     max-height: 100%
+
+.simplebar-content
+    @media screen and ( max-width: 769px )
+        padding-top: 90px !important
